--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -6,42 +6,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
-    tools:context=".GameFragment">
+    tools:context=".fragments.game_fragment">
 
-    <RelativeLayout
+    <FrameLayout
+        android:id="@+id/game_player_left"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="0.2"
         android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/main_IMG_leftPlayer"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
-            android:layout_centerInParent="true"
-            app:srcCompat="@drawable/player_img_bull" />
-
-        <TextView
-            android:id="@+id/main_LBL_leftScore"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_above="@id/main_IMG_leftPlayer"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="10dp"
-            android:textSize="70sp" />
-
-        <EditText
-            android:id="@+id/main_editTXT_left"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:layout_below="@+id/main_IMG_leftPlayer"
-            android:layout_centerHorizontal="true"
-            android:textColor="@color/white"
-            android:textSize="20dp"
-            android:hint="Name"/>
-
-    </RelativeLayout>
+    </FrameLayout>
 
     <RelativeLayout
         android:layout_width="0dp"
@@ -91,42 +65,14 @@
 
     </RelativeLayout>
 
-    <RelativeLayout
+    <FrameLayout
+        android:id="@+id/game_player_right"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="0.2"
         android:orientation="vertical">
 
-
-        <ImageView
-            android:id="@+id/main_IMG_rightPlayer"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
-            android:layout_centerInParent="true"
-            android:scaleX="-1"
-            app:srcCompat="@drawable/player_img_tiger" />
-
-        <TextView
-            android:id="@+id/main_LBL_rightScore"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_above="@id/main_IMG_rightPlayer"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="10dp"
-            android:textSize="70sp" />
-
-        <EditText
-            android:id="@+id/main_editTXT_right"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:layout_below="@+id/main_IMG_rightPlayer"
-            android:layout_centerHorizontal="true"
-            android:textColor="@color/white"
-            android:textSize="20dp"
-            android:hint="Name" />
-
-    </RelativeLayout>
+    </FrameLayout>
 
 </LinearLayout>
 
