--- a/app/src/main/res/layout/fragment_winner.xml
+++ b/app/src/main/res/layout/fragment_winner.xml
@@ -1,85 +1,34 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".WinnerFragment">
-
+    android:orientation="horizontal"
+    tools:context=".fragments.winner_fragment">
 
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.8"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/winner_LBL_leftScore"
-            android:textColor="@color/white"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_above="@+id/winner_IMG_leftPlayer"
-            android:layout_alignParentStart="true"
-            android:paddingStart="100dp"
-            android:textStyle="bold"
-            android:textSize="40sp" />
-
-        <ImageView
-            android:id="@+id/winner_IMG_leftPlayer"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingStart="100dp"
-            android:layout_centerVertical="true"
-            android:layout_alignParentStart="true">
-        </ImageView>
-
-        <ImageView
-            android:id="@+id/winner_IMG_rightPlayer"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingEnd="100dp"
-            android:layout_centerVertical="true"
-            android:layout_alignParentEnd="true">
-        </ImageView>
-
-        <TextView
-            android:id="@+id/winner_LBL_rightScore"
-            android:textColor="@color/white"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_above="@+id/winner_IMG_rightPlayer"
-            android:layout_alignParentEnd="true"
-            android:paddingEnd="100dp"
-            android:textStyle="bold"
-            android:textSize="40sp" />
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="0.5">
 
         <TextView
             android:id="@+id/winner_LBL_msg"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
+            android:layout_centerInParent="true"
             android:paddingBottom="90dp"
             android:textColor="@color/white"
             android:textStyle="bold"
             android:textSize="40sp" />
-
-    </RelativeLayout>
-
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.2"
-        android:orientation="horizontal">
 
         <Button
             android:id="@+id/winner_BTN_restart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:layout_marginStart="20dp"
             android:layout_marginBottom="20dp"
+            android:layout_marginStart="20dp"
             android:text="Restart"
             android:textStyle="bold"
             android:backgroundTint="@color/black"
@@ -87,5 +36,26 @@
 
     </RelativeLayout>
 
+    <RelativeLayout
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="0.5">
+
+        <TextView
+            android:id="@+id/winner_score"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_above="@+id/winner_img"
+            android:textSize="50dp"
+            android:textStyle="bold"/>
+
+        <ImageView
+            android:id="@+id/winner_img"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"/>
+
+    </RelativeLayout>
 
 </LinearLayout>
