--- a/app/src/main/res/layout/fragment_top_scores.xml
+++ b/app/src/main/res/layout/fragment_top_scores.xml
@@ -4,7 +4,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".fragments.topScores_fragment">
+    android:orientation="horizontal"
+    tools:context=".fragments.game_fragment">
+
+    <FrameLayout
+        android:id="@+id/list_left"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="0.55"
+        android:padding="20dp"
+        android:orientation="vertical">
+    </FrameLayout>
+
+    <FrameLayout
+        android:id="@+id/map_right"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="0.45"
+        android:padding="20dp"
+        android:orientation="vertical">
+    </FrameLayout>
 
 </LinearLayout>
