--- a/app/src/main/res/layout/fragment_top_scores.xml
+++ b/app/src/main/res/layout/fragment_top_scores.xml
@@ -11,8 +11,8 @@
         android:id="@+id/list_left"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="0.55"
-        android:padding="20dp"
+        android:layout_weight="0.5"
+        android:layout_margin="5dp"
         android:orientation="vertical">
     </FrameLayout>
 
@@ -21,8 +21,8 @@
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="0.45"
-        android:padding="20dp"
+        android:layout_weight="0.5"
+        android:layout_margin="5dp"
         android:orientation="vertical">
     </FrameLayout>
 
