--- a/app/src/main/res/layout/winners_list_item.xml
+++ b/app/src/main/res/layout/winners_list_item.xml
@@ -3,61 +3,65 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
-
+    android:orientation="horizontal"
+    android:background="@drawable/custom_border"
+    android:layout_marginBottom="5dp">
 
     <TextView
         android:id="@+id/winnerList_item_position"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="0.1"
         android:layout_gravity="center"
-        android:textAlignment="center"
-        android:paddingTop="10dp"
+        android:layout_marginStart="10dp"
         android:textSize="20dp"
-        android:textStyle="bold"
-        android:text="1"/>
+        android:textStyle="bold"/>
 
     <ImageView
         android:id="@+id/winnerList_item_img"
-        android:layout_width="50dp"
-        android:layout_height="50dp"/>
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_gravity="center"
+        android:layout_marginStart="10dp" />
 
-    <TextView
-        android:id="@+id/winnerList_item_name"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="0.1"
-        android:layout_gravity="center"
-        android:paddingTop="10dp"
-        android:paddingStart="10dp"
-        android:textSize="20dp"
-        android:textStyle="bold"
-        android:text="Player Name"/>
+        android:layout_weight="0.5"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/winnerList_item_score"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="0.1"
-        android:layout_gravity="center"
-        android:paddingTop="10dp"
-        android:paddingStart="10dp"
-        android:textSize="25dp"
-        android:textStyle="bold"
-        android:text="Player Score"/>
+        <TextView
+            android:id="@+id/winnerList_item_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingTop="5dp"
+            android:paddingStart="5dp"
+            android:textSize="15dp"
+            android:textStyle="bold"
+            android:textAlignment="viewStart"
+            android:text="Player Name"/>
+
+        <TextView
+            android:id="@+id/winnerList_item_score"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingBottom="5dp"
+            android:paddingStart="5dp"
+            android:textSize="15dp"
+            android:textStyle="bold"
+            android:textAlignment="viewStart"
+            android:text="Player Score"/>
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/winnerList_item_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="0.3"
+        android:layout_weight="0.2"
         android:layout_gravity="center"
-        android:paddingTop="10dp"
-        android:paddingStart="10dp"
-        android:textSize="20dp"
+        android:layout_marginEnd="10dp"
+        android:textSize="15dp"
         android:textStyle="bold"
         android:text="Player Date"/>
-
 
 </LinearLayout>
