--- a/app/src/main/res/layout/winners_list_item.xml
+++ b/app/src/main/res/layout/winners_list_item.xml
@@ -4,29 +4,33 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:background="@drawable/custom_border"
-    android:layout_marginBottom="5dp">
+    android:layout_marginBottom="5dp"
+    android:weightSum="1"
+    android:background="@drawable/custom_border">
 
     <TextView
         android:id="@+id/winnerList_item_position"
+        android:layout_weight="0.01"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginStart="10dp"
         android:textSize="20dp"
-        android:textStyle="bold"/>
+        android:textStyle="bold"
+        android:text="15" />
 
     <ImageView
         android:id="@+id/winnerList_item_img"
+        android:layout_weight="0.01"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_gravity="center"
         android:layout_marginStart="10dp" />
 
     <LinearLayout
+        android:layout_weight="0.9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="0.5"
         android:orientation="vertical">
 
         <TextView
@@ -56,12 +60,11 @@
     <TextView
         android:id="@+id/winnerList_item_date"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="0.2"
-        android:layout_gravity="center"
-        android:layout_marginEnd="10dp"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:layout_marginEnd="1dp"
         android:textSize="15dp"
         android:textStyle="bold"
-        android:text="Player Date"/>
+        android:text="08.12.20 - 18:46 "/>
 
 </LinearLayout>
