--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -12,67 +12,66 @@
         android:id="@+id/game_player_left"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="0.2"
-        android:orientation="vertical">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/main_IMG_leftCard">
 
     </FrameLayout>
-
-    <RelativeLayout
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="0.4"
-        android:orientation="vertical">
-
-        <ImageView
-            android:id="@+id/main_IMG_leftCard"
-            android:layout_width="160dp"
-            android:layout_height="160dp"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
-            android:layout_marginTop="50dp"
-            app:srcCompat="@drawable/backcard"/>
-
-        <ImageView
-            android:id="@+id/main_BTN_play"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="22dp"
-            app:srcCompat="@drawable/play" />
-
-        <ProgressBar
-            android:id="@+id/main_progressBar"
-            style="?android:attr/progressBarStyleHorizontal"
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:indeterminate="false"
-            android:background="@drawable/circular_shape"
-            android:progressDrawable="@drawable/circular_progress_bar"
-            android:layout_centerHorizontal="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="16dp"
-            android:max="26"/>
-
-        <ImageView
-            android:id="@+id/main_IMG_rightCard"
-            android:layout_width="160dp"
-            android:layout_height="160dp"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginTop="50dp"
-            app:srcCompat="@drawable/backcard"/>
-
-    </RelativeLayout>
 
     <FrameLayout
         android:id="@+id/game_player_right"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="0.2"
-        android:orientation="vertical">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/main_IMG_rightCard">
 
     </FrameLayout>
 
-</LinearLayout>
+    <ImageView
+        android:id="@+id/main_IMG_leftCard"
+        app:srcCompat="@drawable/backcard"
+        android:layout_width="160dp"
+        android:layout_height="160dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/main_progressBar" />
+
+    <ImageView
+        android:id="@+id/main_IMG_rightCard"
+        app:srcCompat="@drawable/backcard"
+        android:layout_width="160dp"
+        android:layout_height="160dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/main_BTN_play"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <ImageView
+        android:id="@+id/main_BTN_play"
+        app:srcCompat="@drawable/play"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginBottom="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
+
+    <ProgressBar
+        android:id="@+id/main_progressBar"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:background="@drawable/circular_shape"
+        android:indeterminate="false"
+        android:max="26"
+        android:progressDrawable="@drawable/circular_progress_bar"
+        app:layout_constraintTop_toTopOf="@+id/main_BTN_play"
+        app:layout_constraintBottom_toBottomOf="@+id/main_BTN_play"
+        app:layout_constraintStart_toStartOf="@+id/main_BTN_play"
+        app:layout_constraintEnd_toEndOf="@+id/main_BTN_play"/>
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
 
