--- a/app/src/main/res/layout/fragment_player.xml
+++ b/app/src/main/res/layout/fragment_player.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,7 +11,11 @@
         android:id="@+id/fragment_player_img"
         android:layout_width="120dp"
         android:layout_height="120dp"
-        android:layout_centerInParent="true"/>
+        android:layout_centerInParent="true"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
     <TextView
         android:id="@+id/fragment_player_score"
@@ -18,19 +23,23 @@
         android:layout_height="wrap_content"
         android:layout_above="@id/fragment_player_img"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="10dp"
-        android:textSize="70sp" />
+        android:textSize="70sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/fragment_player_img" />
 
     <EditText
         android:id="@+id/fragment_player_editText"
-        android:layout_width="100dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:layout_below="@+id/fragment_player_img"
-        android:layout_centerHorizontal="true"
+        android:hint="Name"
         android:textColor="@color/white"
         android:textSize="20dp"
-        android:hint="Name"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/fragment_player_img" />
 
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
