--- a/app/src/main/res/layout/winners_list_item.xml
+++ b/app/src/main/res/layout/winners_list_item.xml
@@ -1,59 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
-    android:layout_marginBottom="5dp"
-    android:weightSum="1"
+    android:layout_marginTop="1dp"
     android:background="@drawable/custom_border">
 
     <TextView
         android:id="@+id/winnerList_item_position"
-        android:layout_weight="0.01"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
         android:layout_marginStart="10dp"
+        android:text="15"
         android:textSize="20dp"
         android:textStyle="bold"
-        android:text="15" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
 
     <ImageView
         android:id="@+id/winnerList_item_img"
-        android:layout_weight="0.01"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_gravity="center"
-        android:layout_marginStart="10dp" />
+        android:layout_marginStart="5dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@id/winnerList_item_position"/>
 
     <LinearLayout
-        android:layout_weight="0.9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_marginStart="5dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/winnerList_item_img">
 
         <TextView
             android:id="@+id/winnerList_item_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingTop="5dp"
-            android:paddingStart="5dp"
+            android:text="Player Name"
             android:textSize="15dp"
-            android:textStyle="bold"
-            android:textAlignment="viewStart"
-            android:text="Player Name"/>
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/winnerList_item_score"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingBottom="5dp"
-            android:paddingStart="5dp"
+            android:text="Player Score"
             android:textSize="15dp"
-            android:textStyle="bold"
-            android:textAlignment="viewStart"
-            android:text="Player Score"/>
+            android:textStyle="bold" />
 
     </LinearLayout>
 
@@ -61,10 +62,12 @@
         android:id="@+id/winnerList_item_date"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:gravity="center"
-        android:layout_marginEnd="1dp"
+        android:layout_marginEnd="10dp"
+        android:text="08.12.20 - 18:46 "
         android:textSize="15dp"
         android:textStyle="bold"
-        android:text="08.12.20 - 18:46 "/>
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
